# wevva-warnings

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: build_bom_amoc_geocodes.py  build_emma_aliases.py  build_emma_geocodes.py  build_jma_area_geocodes.py
tests/: test_base.py  test_cap.py  test_cli.py  test_geocoding.py  test_geomet.py  test_meteoalarm_atom.py  test_provider_backends.py  test_query.py  test_registry.py
tests/data/: bom_amoc_geocodes.json  emma_aliases.json  emma_geocodes.json  jma_area_geocodes.json
tests/data/bom_amoc_geocodes/: WA_MW011.json
tests/data/emma_geocodes/: BE001.json
tests/data/jma_area_geocodes/: 2020100.json  240021.json
wevva_warnings/: __init__.py  __main__.py  _debug.py  cap.py  cli.py  geocoding.py  geometry.py  models.py  query.py  registry.py  sources.py
wevva_warnings/backends/: __init__.py  _cap_feed.py  aemet.py  anmeteo.py  bahrain.py  base.py  belgidromet.py  bmkg.py  capews.py  dirmet_cg.py  dmh_myanmar.py  dmh_py.py  dms_botswana.py  dwd.py  eswatini_met.py  ethiomet.py  fmi.py  generic_cap.py  geomet.py  gmet.py  hko.py  hydromet_guyana.py  hydrometcenter.py  igebu.py  imd_india.py  inam_mz.py  inamhi.py  indomet.py  inmet.py  inumet.py  jma.py  jmd.py  kazhydromet.py  kma.py  kyrgyzhydromet.py  met_eireann.py  met_no.py  meteo_cameroon.py  meteo_cw.py  meteo_ke.py  (+43 more)
wevva_warnings/data/: emma_aliases.json
